<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">


    <ScrollView xmlns="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        android:fillViewport="false"
        android:layout_alignParentEnd="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginBottom="190dp">


            <android.support.v7.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="290dp"
                android:layout_gravity="center_horizontal"
                cardview:cardCornerRadius="5dp"
                cardview:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="240dp"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="190dp"
                        android:id="@+id/imageView"
                        android:scaleType="centerCrop"
                        android:src="@drawable/life1"
                        android:contentDescription="img" />
                    <Button
                        android:id="@+id/button1"
                        android:layout_width="256dp"
                        android:layout_height="40dp"
                        android:onClick="onClick"
                        android:text="@string/download"
                        android:layout_weight="0.09" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notstarted"
                    android:textAlignment="center" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="290dp"
                android:layout_gravity="center_horizontal"
                cardview:cardCornerRadius="5dp"
                cardview:cardElevation="10dp">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="240dp"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="190dp"
                        android:id="@+id/imageView1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/life2"
                        android:contentDescription="img" />
                    <Button
                        android:id="@+id/button2"
                        android:layout_width="256dp"
                        android:layout_height="40dp"
                        android:onClick="onClick"
                        android:text="@string/download"
                        android:layout_weight="0.09" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/status1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notstarted"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
